Final commit for this project

--- a/vidly/templates/base.html
+++ b/vidly/templates/base.html
@@ -27,10 +27,11 @@
   </head>
   <body>
  <nav>
-    <div class="nav-wrapper">
+    <div class="nav-wrapper teal lighten-2">
       <a href="#!" class="brand-logo"><i class="material-icons">&emsp;&emsp;movie</i> Vidly </a>
     </div>
   </nav>
+  <br><br>
     <main class="container">
     {% block content %}
     {% endblock  %}
@@ -43,7 +44,7 @@
                 <div class="col l6 s12">
                     <h5 class="white-text">Built By Priyanshu</h5>
                     <p class="grey-text text-lighten-4">This is my first Django Site<br>
-                        Uses Materialize CSS <br> Tastypie API framework <br> Sqlite3 database <br> Hosted on Heroku </p>
+                        Uses Materialize CSS <br> Tastypie API framework <br> Sqlite3 database <br> Hosted on Heroku <br> Runs on Gunicorn </p>
                 </div>
                 <div class="col l4 offset-l2 s12">
                     <h5 class="white-text">Project you may like</h5>
