--- a/vidly/templates/home.html
+++ b/vidly/templates/home.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 
 {% block content %}
- <a href="{% url 'movies:index' %}">Movies</a>
+<center><a href="{% url 'movies:index' %}" class="btn-floating btn-large pulse"><i class="material-icons md-48">cloud</i></a>
+</center>
 {% endblock  %}
